2001-08-22  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-init.c (gda_main_run, gda_main_quit): new functions

	* gda-xml-database.c: cleaned up all remaining GTK stuff

	* gda-xml-document.[ch]: switched to GObject
	(gda_xml_document_free): new function

	* gda-xml-list-item.[ch]: switched to GObject

2001-08-20  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-thread.[ch]: removed, since they're useless in GLib 2.0

	* gda-xml-item.[ch]:
	* gda-xml-bin-item.[ch]:
	* gda-xml-database.[ch]:
	* gda-xml-atom-item.[ch]: switched to GObject

2001-08-19  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-listener.[ch]: switched to GObject

	* gda-error.[ch]: switched to GObject

	* gda-field.[ch]: merged the libgda-client's GdaField and the
	libgda-server's GdaServerField into a unique class

	* gda-config.c (gda_config_add_listener, gda_config_remove_listener):
	new functions for adding/removing configuration listeners

2001-08-18  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-config.[ch]: switched to bonobo-config

	* gda-corba.[ch]: switched to BonoboActivation

2001-08-17  Rodrigo Moya <rodrigo@gnome-db.org>

	* Makefile.am: s/GDA/GNOME_Database

2001-08-03  Rodrigo Moya <rodrigo@gnome-db.org>

	* .[ch]: s/oaf/bonobo_activation

	* Makefile.am: renamed library for GNOME 2 platform, and install
	headers in $(includedir)/gnome/2/gda

2001-07-29  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-xml-database.c (gda_xml_database_table_find): check for NULL
	pointers before using them
	(gda_xml_database_table_new): create the "TABLES" node if it's not
	created yet

2001-07-25  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-xml-document.c (gda_xml_document_get_compress_mode):
	(gda_xml_document_set_compress_mode): new functions

	* gda-util.c (gda_util_hash_to_list): add g_strdup'ed value to the
	returned GList

2001-07-22  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-xml-database.[ch]: rework

	* gda-common-private.h: new file for common declarations
