@@ -21,6 +21,7 @@
  * Boston, MA 02111-1307, USA.
  */
 
+#include <time.h>
 #include <bonobo/bonobo-arg.h>
 #include "gda-common-private.h"
 #include "gda-field.h"
@@ -274,7 +275,11 @@ gda_field_set_bigint_value (GdaField *field, long long value)
 
 	field->priv->corba_field->attributes.gdaType = GNOME_Database_TypeBigint;
 	field->priv->corba_field->actualSize = sizeof (long long);
-	BONOBO_ARG_SET_LONGLONG (field->priv->corba_field->value, value);
+
+	if (field->priv->corba_field->value._value)
+		CORBA_free (field->priv->corba_field->value._value);
+
+	field->priv->corba_field->value._value = ORBit_copy_value (&value, BONOBO_ARG_LONGLONG);
 }
 
 /**
@@ -313,7 +318,11 @@ gda_field_set_boolean_value (GdaField *field, gboolean value)
 
 	field->priv->corba_field->attributes.gdaType = GNOME_Database_TypeBoolean;
 	field->priv->corba_field->actualSize = sizeof (gboolean);
-	BONOBO_ARG_SET_BOOLEAN (&field->priv->corba_field->value, value);
+
+	if (field->priv->corba_field->value._value)
+		CORBA_free (field->priv->corba_field->value._value);
+
+	field->priv->corba_field->value._value = ORBit_copy_value (&value, BONOBO_ARG_BOOLEAN);
 }
 
 /**
@@ -322,6 +331,18 @@ gda_field_set_boolean_value (GdaField *field, gboolean value)
 GDate *
 gda_field_get_date_value (GdaField *field)
 {
+	GNOME_Database_Date *corba_date;
+
+	g_return_val_if_fail (GDA_IS_FIELD (field), NULL);
+
+	corba_date = BONOBO_ARG_GET_GENERAL (&field->priv->corba_field->value,
+					     TC_GNOME_Database_Date,
+					     GNOME_Database_Date,
+					     NULL);
+	if (corba_date)
+		return g_date_new_dmy (corba_date->day, corba_date->month, corba_date->year);
+
+	return NULL;
 }
 
 /**
@@ -330,6 +351,30 @@ gda_field_get_date_value (GdaField *field)
 void
 gda_field_set_date_value (GdaField *field, GDate *date)
 {
+	GNOME_Database_Date corba_date;
+
+	g_return_if_fail (GDA_IS_FIELD (field));
+
+	if (date) {
+		corba_date.year = 0;
+		corba_date.month = 0;
+		corba_date.day = 0;
+	}
+	else {
+		corba_date.year = g_date_get_year (date);
+		corba_date.month = g_date_get_month (date);
+		corba_date.day = g_date_get_day (date);
+	}
+
+	field->priv->corba_field->attributes.gdaType = GNOME_Database_TypeDate;
+	field->priv->corba_field->actualSize = sizeof (GNOME_Database_Date);
+
+	/* copy the value to our internal CORBA_any */
+	if (field->priv->corba_field->value._value)
+		CORBA_free (field->priv->corba_field->value._value);
+
+	field->priv->corba_field->value._value = ORBit_copy_value (
+		&corba_date, TC_GNOME_Database_Date);
 }
 
 /**
@@ -352,7 +397,11 @@ gda_field_set_double_value (GdaField *field, gdouble value)
 
 	field->priv->corba_field->attributes.gdaType = GNOME_Database_TypeDouble;
 	field->priv->corba_field->actualSize = sizeof (gdouble);
-	BONOBO_ARG_SET_DOUBLE (&field->priv->corba_field->value, value);
+
+	if (field->priv->corba_field->value._value)
+		CORBA_free (field->priv->corba_field->value._value);
+
+	field->priv->corba_field->value._value = ORBit_copy_value (&value, BONOBO_ARG_DOUBLE);
 }
 
 /**
@@ -375,7 +424,11 @@ gda_field_set_integer_value (GdaField *field, gint value)
 
 	field->priv->corba_field->attributes.gdaType = GNOME_Database_TypeInteger;
 	field->priv->corba_field->actualSize = sizeof (gint);
-	BONOBO_ARG_SET_INT (&field->priv->corba_field->value, value);
+
+	if (field->priv->corba_field->value._value)
+		CORBA_free (field->priv->corba_field->value._value);
+
+	field->priv->corba_field->value._value = ORBit_copy_value (&value, BONOBO_ARG_INT);
 }
 
 /**
@@ -398,7 +451,11 @@ gda_field_set_single_value (GdaField *field, gfloat value)
 
 	field->priv->corba_field->attributes.gdaType = GNOME_Database_TypeSingle;
 	field->priv->corba_field->actualSize = sizeof (gfloat);
-	BONOBO_ARG_SET_FLOAT (&field->priv->corba_field->value, value);
+
+	if (field->priv->corba_field->value._value)
+		CORBA_free (field->priv->corba_field->value._value);
+
+	field->priv->corba_field->value._value = ORBit_copy_value (&value, BONOBO_ARG_FLOAT);
 }
 
 /**
@@ -421,7 +478,11 @@ gda_field_set_smallint_value (GdaField *field, gshort value)
 
 	field->priv->corba_field->attributes.gdaType = GNOME_Database_TypeSmallint;
 	field->priv->corba_field->actualSize = sizeof (gshort);
-	BONOBO_ARG_SET_SHORT (&field->priv->corba_field->value, value);
+
+	if (field->priv->corba_field->value._value)
+		CORBA_free (field->priv->corba_field->value._value);
+
+	field->priv->corba_field->value._value = ORBit_copy_value (&value, BONOBO_ARG_SHORT);
 }
 
 /**
@@ -456,6 +517,107 @@ gda_field_set_string_value (GdaField *field, const gchar *value)
 }
 
 /**
+ * gda_field_get_time_value
+ */
+GTime
+gda_field_get_time_value (GdaField *field)
+{
+	GNOME_Database_Time *corba_time;
+
+	g_return_val_if_fail (GDA_IS_FIELD (field), -1);
+
+	corba_time = BONOBO_ARG_GET_GENERAL (&field->priv->corba_field->value,
+					     TC_GNOME_Database_Time,
+					     GNOME_Database_Time,
+					     NULL);
+	if (corba_time) {
+		struct tm stm;
+
+		memset (&stm, 0, sizeof (stm));
+		stm.tm_hour = corba_time->hour;
+		stm.tm_min = corba_time->minute;
+		stm.tm_sec = corba_time->second;
+
+		return mktime (&stm);
+	}
+
+	return -1;
+}
+
+/**
+ * gda_field_set_time_value
+ */
+void
+gda_field_set_time_value (GdaField *field, GTime value)
+{
+	/* FIXME: implement */
+}
+
+/**
+ * gda_field_get_timestamp_value
+ */
+time_t
+gda_field_get_timestamp_value (GdaField *field)
+{
+	GNOME_Database_Timestamp corba_timet;
+
+	g_return_val_if_fail (GDA_IS_FIELD (field), -1);
+
+	corba_timet = BONOBO_ARG_GET_GENERAL (&field->priv->corba_field->value,
+					      TC_GNOME_Database_Timestamp,
+					      GNOME_Database_Timestamp,
+					      NULL);
+	if (corba_timet) {
+		struct tm stm;
+
+		stm.tm_year = corba_timet->year;
+		stm.tm_month = corba_timet->month;
+		stm.tm_day = corba_timet->day;
+		stm.tm_hour = corba_timet->hour;
+		stm.tm_min = corba_timet->minute;
+		stm.tm_sec = corba_timet->second;
+
+		return mktime (&stm);
+	}
+
+	return -1;
+}
+
+/**
+ * gda_field_set_timestamp_value
+ */
+void
+gda_field_set_timestamp_value (GdaField *field, time_t value)
+{
+	struct tm *stm;
+	GNOME_Database_Timestamp corba_timet;
+
+	g_return_if_fail (GDA_IS_FIELD (field));
+
+	stm = localtime (value);
+	if (!stm)
+		return;
+
+	corba_timet.year = stm->tm_year;
+	corba_timet.month = stm->tm_month;
+	corba_timet.day = stm->tm_day;
+	corba_timet.hour = stm->tm_hour;
+	corba_timet.minute = stm->tm_min;
+	corba_timet.second = stm->tm_sec;
+	corba_timet.fraction = 0;
+
+	field->priv->corba_field->attributes.gdaType = GNOME_Database_TypeTimestamp;
+	field->priv->corba_field->actualSize = sizeof (GNOME_Database_Timestamp);
+
+	/* copy the value to our internal CORBA_any */
+	if (field->priv->corba_field->value._value)
+		CORBA_free (field->priv->corba_field->value._value);
+
+	field->priv->corba_field->value._value = ORBit_copy_value (
+		&corba_timet, TC_GNOME_Database_Timestamp);
+}
+
+/**
  * gda_field_get_tinyint_value
  */
 gchar
@@ -475,5 +637,9 @@ gda_field_set_tinyint_value (GdaField *field, gchar value)
 
 	field->priv->corba_field->attributes.gdaType = GNOME_Database_TypeTinyint;
 	field->priv->corba_field->actualSize = sizeof (gchar);
-	BONOBO_ARG_SET_CHAR (&field->priv->corba_field->value, value);
+
+	if (field->priv->corba_field->value._value)
+		CORBA_free (field->priv->corba_field->value._value);
+
+	field->priv->corba_field->value._value = ORBit_copy_value (&value, BONOBO_ARG_CHAR);
 }
