@@ -1,5 +1,13 @@
 2001-08-22  Rodrigo Moya <rodrigo@gnome-db.org>
 
+	* gda-field.c (gda_field_set_date_value, gda_field_get_date_value,
+	gda_field_set_time_value, gda_field_get_time_value,
+	gda_field_set_timestamp_value, gda_field_get_timestamp_value):
+	implemented
+	(gda_field_set_*_value): use ORBit_copy_value when setting a value
+
+2001-08-22  Rodrigo Moya <rodrigo@gnome-db.org>
+
 	* gda-init.c (gda_main_run, gda_main_quit): new functions
 
 	* gda-xml-database.c: cleaned up all remaining GTK stuff
